# fraud_detection

./: .gitignore  README.md  Snappt Fraud Prevention Assignment - Santiago Elewaut.docx  best_model.pth  best_xgboost_model.pkl  requirements.txt  setup.cfg  setup.py  snaptt case one pager.docx
notebooks/: analysis.ipynb
src/fraud_detector/: flask_app.py  nn.py  sklearn_model.py  utils.py
