[metadata]
name = forecast_forge
version = 0.0.1
description="Fraud detection"
long_description = file: README.md
url='https://github.com/selewaut/fraud_detection'
author="Santiago Elewaut"
author_email='santielewaut@gmail.com'
classifiers =
        'Programming Language :: Python :: 3.11'
[options]
py_modules = fraud_detection
python_requires = >=3.11
package_dir =
 = src
[bumpversion]



current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:fraud_detection/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'